2018-06-18 implement product filtring

--- a/scart/src/containers/Filters/Filter.scss
+++ b/scart/src/containers/Filters/Filter.scss
@@ -139,4 +139,9 @@
     top: 0;
     bottom: inherit;
   }
-  
+  .filter-widget {
+     margin-bottom: 45px;   
+     h4 {
+         padding-bottom: 15px;
+     }
+  }
