--- a/scart/src/containers/Shop/Shop.scss
+++ b/scart/src/containers/Shop/Shop.scss
@@ -6,3 +6,13 @@
     padding-top: 20px;
     margin-bottom: 30px;
 }
+.fitler-siderbar {
+    border-left: 1px solid #ccc;
+}
+.order-by {
+    margin-bottom: 30px; 
+    .form-control {
+        min-width: 280px;
+        width: 30px;
+    }
+}
