2018-06-22 Product Single Page Implementation.

--- a/scart/src/App.scss
+++ b/scart/src/App.scss
@@ -5,3 +5,9 @@ img {
 	max-width: 100%;
 	height: auto;
 }
+.carousel-indicators li {
+	background-color: var(--blue);
+}
+.carousel-control-prev, .carousel-control-next {
+	opacity: 1;
+}
